RESOLVED FIXED292681
Fix TestWebKitAPI.DragAndDropTests.AdditionalLinkAndImageIntoContentEditable after 294585@main
https://bugs.webkit.org/show_bug.cgi?id=292681
Summary Fix TestWebKitAPI.DragAndDropTests.AdditionalLinkAndImageIntoContentEditable ...
Alex Christensen
Reported 2025-05-07 12:38:51 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-05-07 12:39:17 PDT
Alex Christensen
Comment 2 2025-05-07 12:40:04 PDT
EWS
Comment 3 2025-05-07 12:43:44 PDT
Committed 294628@main (3403fdd56fab): <https://commits.webkit.org/294628@main> Reviewed commits have been landed. Closing PR #45073 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.