Fix TestWebKitAPI.DragAndDropTests.AdditionalLinkAndImageIntoContentEditable after 294585@main https://bugs.webkit.org/show_bug.cgi?id=292681 rdar://150873201

Reviewed by Wenson Hsieh.

🤦‍♂️

* Source/WebKit/UIProcess/ios/WebPageProxyIOS.mm:
(WebKit::WebPageProxy::requestAdditionalItemsForDragSession):

Canonical link: https://commits.webkit.org/294628@main